--- a/front/src/App.css
+++ b/front/src/App.css
@@ -1,38 +1,70 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+  font-family: Verdana,sans-serif;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+#encabezado{
+  background-color: #04AA6D;
+  width: 100%;
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+#nombre{
+  text-align: center;
+  display: inline-block;
+  width: 25%;
+  
+}
+#titulo{
+  text-align: left;
+  display: inline-block;
+  width: 65%;
+  padding-left: 110px;
+}
+#div-entrada {
+  display: flex;
+  padding-top: 30px;
+  width: 100%;  
+}
+#div-xsl, #div-xml{
+  width: 49.99999%;
+  margin: 30px;
+  font-size: 21px;
+}
+#div-salida{
+  width: 100%;
+  font-size: 21px;
+  display: inline;
+  margin-left: 35px;
+  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#code-xsl, #code-xml{
+  width: 90%;
+  height: 350px;
+  font-size: 15px;
+  margin-top: 25px;
+  padding: 20px;
+}
+
+#xml-transformado{
+  width: 91%;
+  height: 550px;
+  font-size: 15px;
+  margin-top: 25px;
+  margin-left: 28px;
+  padding: 40px;
+  
+}
+
+#boton{
+  text-decoration: none;
+  padding: 8px;
+  margin: 15px;
+  font-size: 20px;
+  color: #ffffff;
+  background-color: #04AA6D;
+  border-radius: 6px;
+  border: none;
+}
+#boton:hover{
+  border: 3px solid #03794e;
 }
